fix (iOS): footnote (source) text spacing

--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -73,7 +73,6 @@
 
   --android-font-family: 'Noto Sans JP', 'Noto', 'Roboto', sans-serif;
 
-
   /* replace with JS depending on subject category */
   --label-font-color: #222222;
   --label-background-color: rgba(220, 220, 220, 0.5);
@@ -152,7 +151,7 @@
 
   /* Footnote */
   --ios-font-size-footnote: 0.75rem; /* Smallest standard text */
-  --ios-line-height-footnote: 1rem;
+  --ios-line-height-footnote: 1.25rem; // original: 1rem;
 
   /* Caption Sizes */
   --ios-font-size-caption1: 0.6875rem; /* Smallest caption */
